Data Validation and refactoring/cleaning