@@ -14,7 +14,6 @@ import org.springframework.util.StringUtils;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,7 +34,7 @@ public class CustomerServiceJPA implements CustomerService {
         return customerRepository.findAll()
                 .stream()
                 .map(customerMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
