@@ -4,19 +4,29 @@ import br.dev.jcp.training.springboot6brewery.entities.Beer;
 import br.dev.jcp.training.springboot6brewery.exceptions.NotFoundException;
 import br.dev.jcp.training.springboot6brewery.models.BeerDTO;
 import br.dev.jcp.training.springboot6brewery.repositories.BeerRepository;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.HttpStatusCode;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.test.annotation.Rollback;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.context.WebApplicationContext;
 
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
 class BeerControllerIT {
@@ -26,6 +36,19 @@ class BeerControllerIT {
 
     @Autowired
     private BeerRepository beerRepository;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    @Autowired
+    WebApplicationContext context;
+
+    MockMvc mockMvc;
+
+    @BeforeEach
+    void setUp() {
+        mockMvc = MockMvcBuilders.webAppContextSetup(context).build();
+    }
 
     @Test
     void shouldReturnAllBeers() {
@@ -44,7 +67,7 @@ class BeerControllerIT {
 
     @Test
     void shouldReturnBeerById() {
-        Beer beer = beerRepository.findAll().get(0);
+        Beer beer = beerRepository.findAll().getFirst();
         BeerDTO beerDto = beerController.getBeerById(beer.getId());
         assertThat(beerDto).isNotNull();
         assertThat(beerDto.getId()).isEqualTo(beer.getId());
@@ -52,7 +75,8 @@ class BeerControllerIT {
 
     @Test
     void shouldReturnNotFouldExpetion() {
-        assertThatThrownBy(() -> beerController.getBeerById(UUID.randomUUID()))
+        UUID uuid = UUID.randomUUID();
+        assertThatThrownBy(() -> beerController.getBeerById(uuid))
                 .isInstanceOf(NotFoundException.class);
     }
 
@@ -72,7 +96,7 @@ class BeerControllerIT {
         String[] locationUUID = responseEntity.getHeaders().getLocation().getPath().split("/");
         UUID savedUUID = UUID.fromString(locationUUID[locationUUID.length - 1]);
 
-        Beer beer = beerRepository.findById(savedUUID).get();
+        Beer beer = beerRepository.findById(savedUUID).orElse(null);
         assertThat(beer).isNotNull();
     }
 
@@ -80,7 +104,7 @@ class BeerControllerIT {
     @Transactional
     @Test
     void shouldUpdateBeer() {
-        BeerDTO beerDTO = beerController.listBeers().get(0);
+        BeerDTO beerDTO = beerController.listBeers().getFirst();
         UUID beerId = beerDTO.getId();
         beerDTO.setId(null);
         beerDTO.setVersion(null);
@@ -89,13 +113,16 @@ class BeerControllerIT {
         ResponseEntity<BeerDTO> responseEntity = beerController.updateBeer(beerId, beerDTO);
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(200));
 
-        Beer beer = beerRepository.findById(beerId).get();
+        Beer beer = beerRepository.findById(beerId).orElse(null);
+        assertThat(beer).isNotNull();
         assertThat(beer.getBeerName()).isEqualTo(beerName);
     }
 
     @Test
     void shouldReturnNotFoundExceptionForUpdate() {
-        assertThatThrownBy(() -> beerController.updateBeer(UUID.randomUUID(), BeerDTO.builder().build()))
+        UUID beerId = UUID.randomUUID();
+        BeerDTO beerDTO = BeerDTO.builder().build();
+        assertThatThrownBy(() -> beerController.updateBeer(beerId, beerDTO))
                 .isInstanceOf(NotFoundException.class);
     }
 
@@ -103,7 +130,7 @@ class BeerControllerIT {
     @Transactional
     @Test
     void shouldDeleteBeerById() {
-        Beer beer = beerRepository.findAll().get(0);
+        Beer beer = beerRepository.findAll().getFirst();
         ResponseEntity<String> responseEntity = beerController.deleteBeer(beer.getId());
         assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(204));
         assertThat(beerRepository.findById(beer.getId())).isEmpty();
@@ -111,6 +138,19 @@ class BeerControllerIT {
 
     @Test
     void shouldReturnNotFoundExceptioForDeleteById() {
-        assertThatThrownBy(() -> beerController.deleteBeer(UUID.randomUUID())).isInstanceOf(NotFoundException.class);
+        UUID beerId = UUID.randomUUID();
+        assertThatThrownBy(() -> beerController.deleteBeer(beerId)).isInstanceOf(NotFoundException.class);
+    }
+
+    @Test
+    void shouldReturnBadRequestForBeerWithNameTooLong() throws Exception {
+        Beer beerEntity = beerRepository.findAll().getFirst();
+        Map<String, Object> beerMap = new HashMap<>();
+        beerMap.put("beerName", "New name 1234567890 9876543210 1478523690 0369852147 XYZ ABC");
+        mockMvc.perform(patch(BeerController.BEER_PATH_ID, beerEntity.getId())
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .accept(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(beerMap)))
+                .andExpect(status().isBadRequest());
     }
 }
